inicia o forms do main

--- a/style.css
+++ b/style.css
@@ -21,3 +21,13 @@ header {
   width: 470px;
   justify-content: space-between;
 }
+
+main  {
+  display: flex;
+}
+
+#evaluation-form  {
+  display: flex;
+  width: 675px;
+  flex-direction: column;
+}
