--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   font-family: sans-serif;
 }
 
+h2  {
+  align-self: center;
+}
+
 header {
   background-color: rgb(50, 167, 145);
   display: flex;
@@ -34,4 +38,8 @@ main {
 
 #trybewarts-forms-logo {
   height: 500px;
+}
+
+.first-forms input  {
+  width: 330px;
 }
