--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Benne&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -24,51 +22,27 @@ header {
   margin-bottom: 25px;
 }
 
-#logar {
-  background-color: indigo;
-  color: white;
-  padding: 20px;
-}
-
 .trybewarts-header-logo {
   width: 80px;
   height: 80px;
   align-self: flex-start;
 }
 
-.trybewarts-login {
-  display: flex;
-}
 
 main {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 #evaluation-form {
   display: flex;
   width: 675px;
   flex-direction: column;
-  margin: 20px;
+
 }
 
-#trybewarts-forms-logo {
-  height: 500px;
-}
-
-.first-forms input {
-  width: 330px;
-  font-size: 15px;
-  font-weight: 800;
-  border-radius: 8px;
-  padding: 15px;
-  border: 0.1px solid gray;
-}
-
-
-label {
-  font-size: 18px;
-  font-weight: 800;
+#trybewarts-forms-logo  {
+  width: 675px;
 }
 
 #input-name , #input-lastname , #input-email {
@@ -87,9 +61,50 @@ textarea {
 
 .radio-forms {
   display: flex;
+  justify-content: space-around;
 }
 
-.radio-forms div {
-  display: flex;
+
+footer  {
+  text-align: center;
+  background-color: gray;
+}
+
+.form-control {
+  display: inline;
+  width: auto;
   margin-right: 10px;
+}
+
+.second-forms {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.forms-conteudo {
+  width: 300px;
+}
+
+.radio-forms div  {
+  align-self: center;
+}
+
+#label-rate {
+  flex-basis: 300px;
+}
+
+.form-floating  {
+  width: 670px;
+}
+
+#text-coment  {
+  width: 100%;
+}
+
+.accept-form  {
+  margin-bottom: 100px;
+}
+
+#label-infos  {
+  margin-bottom: 20px;
 }
